<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/public_bg_color_version2"
    android:orientation="vertical">
    <!--头部-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="分享到"
            android:textColor="@color/home_area_txt_color"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="19dp"
            android:orientation="horizontal">
            <!--QQ-->
            <LinearLayout
                android:id="@+id/mQQShare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ssdk_oks_classic_qq" />

                <TextView
                    style="@style/Txt_share_"
                    android:text="@string/activity_my_action_share_to_wx" />
            </LinearLayout>
            <!--微信-->
            <LinearLayout
                android:id="@+id/mWeChatShare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_wx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ssdk_oks_classic_wechat" />

                <TextView
                    style="@style/Txt_share_"
                    android:text="@string/activity_my_action_share_to_wx" />
            </LinearLayout>

            <!--微博-->
            <LinearLayout
                android:id="@+id/mWeiBoShare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_weibo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ssdk_oks_classic_sinaweibo" />

                <TextView
                    style="@style/Txt_share_"
                    android:text="@string/activity_my_action_share_to_xlwb" />
            </LinearLayout>
            <!--空间-->
            <LinearLayout
                android:id="@+id/mQzoneShare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_qzone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ssdk_oks_classic_qzone" />

                <TextView
                    style="@style/Txt_share_"
                    android:text="@string/activity_my_action_share_to_qzone" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:orientation="horizontal">

            <!--朋友圈-->
            <LinearLayout
                android:id="@+id/mWeChatFriendShare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_wx_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ssdk_oks_classic_wechatmoments" />

                <TextView
                    style="@style/Txt_share_"
                    android:text="@string/activity_my_action_share_to_wx_friend" />
            </LinearLayout>
            <!--复制链接（手机复制）-->
            <LinearLayout
                android:id="@+id/mcopylineShare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_copy_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ssdk_oks_classic_email" />

                <TextView
                    style="@style/Txt_share_"
                    android:text="@string/activity_my_action_share_to_copy" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"></LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <!--取消-->
    <TextView
        android:id="@+id/txtCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:paddingBottom="17dp"
        android:paddingTop="18dp"
        android:text="取消"
        android:textColor="@color/home_area_txt_color"
        android:textSize="17sp" />
</LinearLayout>